[Changes for 0.88 - 2008-10-28]
* Add special case for File::HomeDir.

[Changes for 0.87 - 2008-10-28]
* Add special case for PPI.

[Changes for 0.86 - 2008-10-23]
* Fix the 'use prefork "Foo"' static detection.
* Fix the detection of any of the module-loader modules such as
  prefork, autouse, etc. if invoked as 'use prefork"Foo"' (note
  the lack of a space).
* Slightly refactor the loader-module scanning. (see above)
* Support for "use maybe 'foo';"
* Use (arch|priv)libexp instead of (arch|priv)lib
  in scandeps.pl (Mark Stosberg)
* Update to Module::Install 0.77

[Changes for 0.85 - 2008-08-01]
* Add special case for Net::Server.

[Changes for 0.84 - 2008-05-13]
* Add special case for Class::MethodMaker.

[Changes for 0.83 - 2008-03-23]
* Add special case for Image::ExifTool.

[Changes for 0.82 - 2008-01-08]
* Add Test::More to build requirements (Alexandr Ciornii)
* Add dependency on version.pm
* Now correctly identifies feature.pm as a dependency if
  "use 5.10.0;" (and up) is found.

[Changes for 0.81 - 2007-12-07]
* Fix for the case-insensitive-file-system-test.

[Changes for 0.80 - 2007-11-30]
* Fix to avoid duplicated entries arising from used_by references with
  case differences.
* Do not report input files themselves as dependencies.
  (Regression from 0.74 onwards)
* Remove warning from ScanFileRE tests.

[Changes for 0.78 - 2007-11-17]
* Fix ScanFileRE heuristics to allow for scanning files without
  suffixes.

[Changes for 0.77 - 2007-09-20]
* Add support for prefork.pm (similar to how base.pm is detected).
* Added uses field to hash descriptions returned by scan_deps +
  tests (Adrian Issott)
* Added ScanFileRE to restrict the files scanned to .pl, .pm, .al and
  .t but allow the user to override + tests (Adrian Issott)

[Changes for 0.76 - 2007-07-21]
* Fix special case for Term::ReadLine (should not rope in Tk)
* New special case for Tcl::Tk (should not rope in Tk either!)
* New special case for threads::shared ==> rope in attributes.pm